--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
       <div class="row">
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="http://www.boun.edu.tr/en_US" target="_blank"><img src="assets/img/education/bap.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="http://www.boun.edu.tr/en_US" target="_blank" style="color:#12d640">Bapatla Engineering College</a><br> </h4>
+            <img src="assets/img/education/bap.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90">
+            <h4 style="text-align:left;color:#12d640">Bapatla Engineering College<br> </h4>
             <h5 style="text-align:left;"><em>Bachelor of Technology in Computer Science and Engineering  <strong>CGPA: 8.6/10.00</strong></em></h5>
             <span class="left" style="float:left;color:#fff;"><em>2020-24</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Bapatla</em></span><br><br>
@@ -152,8 +152,8 @@
         </div>
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="http://www.boun.edu.tr/en_US" target="_blank"><img src="assets/img/education/tir.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="http://www.boun.edu.tr/en_US" target="_blank" style="color:#12d640">Tirumala Junior College</a><br> </h4>
+            <img src="assets/img/education/tir.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90">
+            <h4 style="text-align:left;color:#12d640">Tirumala Junior College<br> </h4>
             <h5 style="text-align:left;"><em>Board of Intermediate Education  <strong>CGPA: 9.7/10.00</strong></em></h5>
             <span class="left" style="float:left;color:#fff;"><em>2018-20</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Rajamahendravaram</em></span><br><br>
@@ -161,8 +161,8 @@
         </div>
         <div class="col-lg-12" data-aos="fade-up">
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-            <a href="https://kocaelifenlisesi.meb.k12.tr/" target="_blank"><img src="assets/img/education/bha.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90"></a>
-            <h4 style="text-align:left;"><a href="https://kocaelifenlisesi.meb.k12.tr/" target="_blank" style="color:#12d640">Bhashyam Public School</a><br> </h4>
+            <img src="assets/img/education/bha.png" class="img-fluid" style="float:left;margin:0 10px 0 0;" width="90">
+            <h4 style="text-align:left;color:#12d640">Bhashyam Public School</a><br> </h4>
             <h5 style="text-align:left;"><em>Board of Secondary Education  <strong>CGPA: 10/10.00</strong></em></h5>
             <span class="left" style="float:left;color:#fff;"><em>2017-18</em></span>
             <span class="right" style="float:right;color:#fff;"><em>Mandapeta</em></span><br><br>
@@ -479,11 +479,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div><br/><br/>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-12">
-                <p>&copy; 2024 Developed by <b>Mani Sudheer</b></p>
-                <b>Thank you &#10084;</b>
+                <p style='color: #444444'>&copy; 2024 <b>Mani Sudheer</b></p>
+				<p style='color: #444444'>Feel free to reach out!</p>
             </div>
         </div>
     </div>
